firewall.conf
# Generated by iptables-save v1.4.4 on Tue Oct 12 17:06:24 2010
*security
:INPUT ACCEPT [10959:16385135]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1476:85032]
COMMIT
# Completed on Tue Oct 12 17:06:24 2010
# Generated by iptables-save v1.4.4 on Tue Oct 12 17:06:24 2010
*raw
:PREROUTING ACCEPT [10967:16387879]
:OUTPUT ACCEPT [1476:85032]
COMMIT
# Completed on Tue Oct 12 17:06:24 2010
# Generated by iptables-save v1.4.4 on Tue Oct 12 17:06:24 2010
*nat
:PREROUTING ACCEPT [8:2744]
:POSTROUTING ACCEPT [10:633]
:OUTPUT ACCEPT [10:633]
COMMIT
# Completed on Tue Oct 12 17:06:24 2010
# Generated by iptables-save v1.4.4 on Tue Oct 12 17:06:24 2010
*mangle
:PREROUTING ACCEPT [10967:16387879]
:INPUT ACCEPT [10959:16385135]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1476:85032]
:POSTROUTING ACCEPT [1476:85032]
COMMIT
# Completed on Tue Oct 12 17:06:24 2010
# Generated by iptables-save v1.4.4 on Tue Oct 12 17:06:24 2010
*filter
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
#accept http traffic
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3000 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3001 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3002 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3003 -j ACCEPT
#copied from interwebs
-N SSH_CHECK
-A INPUT -p tcp --dport 22 -m state --state NEW -j SSH_CHECK
-A SSH_CHECK -m recent --set --name SSH
-A SSH_CHECK -m recent --update --seconds 300 --hitcount 4 --name SSH -j DROP
#end

-A INPUT -m state --state INVALID -j DROP
-A INPUT -i lo -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -j DROP
COMMIT
# Completed on Tue Oct 12 17:06:24 2010
